# skill-based-role-portal

./: .gitignore  README.md  pull_request_template.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose-dev.yml  docker-compose.yml  drop_tables.py  init_database.py  main.py  pyproject.toml  test.Dockerfile  wsgi.py
backend/application/: __init__.py  config.py  enums.py  errors.py
backend/application/dao/: access_control_dao.py  role_dao.py  role_listing_dao.py  staff_dao.py
backend/application/dto/: exception.py  response.py  role_listing.py
backend/application/enums/: access_control_role.py  application_status.py  role_status.py
backend/application/models/: access_control.py  role.py  role_application.py  role_listing.py  role_skill.py  skill.py  staff.py  staff_skill.py
backend/application/routes/: access_control_route.py  auth_route.py  profile_route.py  role_listing_route.py  role_route.py  route_decorators.py  skills_route.py  staff_route.py
backend/application/services/: access_control_service.py  role_listing_service.py  role_service.py  skill_service.py  staff_service.py
backend/data/: role.csv  role_skill.csv  skill.csv  staff.csv  staff_skill.csv
backend/migrations/versions/: 01589726cdc9_initial_migration.py  4727423ee37c_initial_migration.py  4d46176f1ca8_initial_migration.py  60f91d0720a7_initial_migration.py  76a07741415e_initial_migration.py  8ac574e35ef3_initial_migration.py  8d4c41ed804f_initial_migration.py  (+6 more)
backend/scripts/: createdb.sh
backend/tests/: conftest.py  test_role_listing.py
(+79 files in other folders)
