[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["zhiweit <theanzhiwei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.0.5"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
pytest = "^7.4.2"
marshmallow = "^3.20.1"
load-dotenv = "^0.1.0"
flask-jwt-extended = "^4.5.2"
flask-migrate = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
